Update project metadata and enhance README for Interactive Transit Map Explorer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my-vue-app</title>
+    <meta name="description" content="Interactive map to explore public transport routes and stops using real-time OpenStreetMap data" />
+    <meta name="keywords" content="public transport, bus routes, tram routes, transit map, OpenStreetMap" />
+    <title>Interactive Transit Map Explorer</title>
   </head>
   <body>
     <div id="root"></div>
